Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otusapp-service
spec:
  selector:
    app: dotnetotusapp
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 80 
  type: NodePort
